# turboCommit

./: .gitignore  Cargo.toml  README.md
.cursor/commands/: test-in-container.md
.devcontainer/: devcontainer.json  setup-test-repos.sh
src/: actor.rs  cli.rs  config.rs  debug_log.rs  git.rs  jj.rs  main.rs  model.rs  openai.rs  spinner.rs  util.rs
