[package]
name = "turbocommit"
version = "3.0.0"
edition = "2021"
authors = [ "dikkadev",]
description = "A CLI tool to create commit messages with OpenAI GPT models for Git and Jujutsu (JJ) repositories"
readme = "README.md"
keywords = [ "chatgpt", "commit", "commit_message", "cli", "command-line",]
repository = "https://github.com/dikkadev/turboCommit"
homepage = "https://github.com/dikkadev/turboCommit"
documentation = "https://github.com/dikkadev/turboCommit"
license = "MIT"

[dependencies]
anyhow = "1.0.69"
colored = "2.0.0"
crates_io_api = "0.8.1"
crossterm = "0.26.1"
edit = "0.1.4"
futures = "0.3.27"
git2 = "0.18.2"
home = "0.5.4"
inquire = "0.6.0"
jj-lib = "0.34.0"
pollster = "0.4.0"
serde_json = "1.0.93"
serde_yaml = "0.9.19"
terminal-supports-emoji = "0.1.3"
tiktoken-rs = "0.2.2"
url = "2.4.1"
atty = "0.2"

[dev-dependencies]
tempfile = "3.4.0"

[dependencies.reqwest]
version = "0.11.14"
features = [ "json",]

[dependencies.serde]
version = "1.0.152"
features = [ "derive",]

[dependencies.tokio]
version = "1.26.0"
features = [ "full",]
